/**
 * OSSA Platform Agent Coordination
 * Implements separation of duties and inter-agent communication
 */

import { EventEmitter } from 'events';
import { OrchestratorPlatform } from '../orchestrator';

export interface PlatformAgent {
  id: string;
  type: 'orchestrator' | 'spec-authority' | 'registry-core' | 'compliance-engine' | 
        'protocol-bridge' | 'governance-core' | 'federation-manager' | 
        'security-authority' | 'monitor-platform' | 'workflow-executor';
  subtype: string;
  status: 'active' | 'idle' | 'busy' | 'error' | 'offline';
  endpoint: string;
  capabilities: string[];
  responsibilities: string[];
}

export interface CoordinationRequest {
  id: string;
  from: string;
  to: string;
  type: 'delegate' | 'consult' | 'notify' | 'validate' | 'enforce';
  payload: any;
  priority: 'low' | 'medium' | 'high' | 'critical';
  timeout: number;
  correlationId?: string;
}

export interface CoordinationResponse {
  id: string;
  requestId: string;
  from: string;
  to: string;
  status: 'success' | 'error' | 'partial' | 'delegated';
  payload: any;
  timestamp: Date;
  metadata?: any;
}

/**
 * Platform Coordination Manager
 * Handles communication and task coordination between OSSA platform agents
 */
export class PlatformCoordination extends EventEmitter {
  private orchestrator: OrchestratorPlatform;
  private platformAgents: Map<string, PlatformAgent> = new Map();
  private pendingRequests: Map<string, CoordinationRequest> = new Map();
  private agentId: string;

  constructor(orchestrator: OrchestratorPlatform, agentId: string = 'orchestrator-platform') {
    super();
    this.orchestrator = orchestrator;
    this.agentId = agentId;
    this.initializePlatformAgents();
    this.setupCoordinationHandlers();
  }

  /**
   * Initialize known platform agents based on OSSA separation of duties
   */
  private initializePlatformAgents(): void {
    const platformAgentDefinitions: PlatformAgent[] = [
      {
        id: 'spec-authority',
        type: 'spec-authority',
        subtype: 'specification',
        status: 'offline',
        endpoint: 'http://localhost:3003/api/v1/specifications',
        capabilities: ['acdl-validation', 'schema-authority', 'conformance-validation'],
        responsibilities: ['ACDL standard maintenance', 'OpenAPI schema definitions', 'Conformance level definitions']
      },
      {
        id: 'registry-core',
        type: 'registry-core',
        subtype: 'discovery',
        status: 'offline',
        endpoint: 'http://localhost:3004/api/v1/registry',
        capabilities: ['agent-discovery', 'capability-matching', 'registry-management'],
        responsibilities: ['Global agent registry', 'Agent discovery service', 'Capability matching']
      },
      {
        id: 'compliance-engine',
        type: 'compliance-engine',
        subtype: 'compliance',
        status: 'offline',
        endpoint: 'http://localhost:3005/api/v1/compliance',
        capabilities: ['ossa-compliance', 'certification', 'audit-trail'],
        responsibilities: ['OSSA conformance validation', 'Enterprise certification', 'Regulatory compliance']
      },
      {
        id: 'protocol-bridge',
        type: 'protocol-bridge',
        subtype: 'protocol',
        status: 'offline',
        endpoint: 'http://localhost:3006/api/v1/protocols',
        capabilities: ['rest-bridge', 'grpc-bridge', 'mcp-bridge', 'graphql-bridge'],
        responsibilities: ['Multi-protocol communication', 'Protocol translation', 'Protocol routing']
      },
      {
        id: 'governance-core',
        type: 'governance-core',
        subtype: 'governance',
        status: 'offline',
        endpoint: 'http://localhost:3007/api/v1/governance',
        capabilities: ['budget-enforcement', 'policy-governance', 'resource-management'],
        responsibilities: ['Production budget enforcement', 'Policy governance', 'Resource allocation']
      },
      {
        id: 'security-authority',
        type: 'security-authority',
        subtype: 'security',
        status: 'offline',
        endpoint: 'http://localhost:3008/api/v1/security',
        capabilities: ['security-validation', 'threat-assessment', 'auth-enforcement'],
        responsibilities: ['Production security validation', 'Threat assessment', 'Authentication enforcement']
      },
      {
        id: 'monitor-platform',
        type: 'monitor-platform',
        subtype: 'monitor',
        status: 'offline',
        endpoint: 'http://localhost:3009/api/v1/monitoring',
        capabilities: ['health-monitoring', 'metrics-collection', 'alerting'],
        responsibilities: ['Production platform monitoring', 'System telemetry', 'Health checks']
      }
    ];

    platformAgentDefinitions.forEach(agent => {
      this.platformAgents.set(agent.id, agent);
    });

    console.log(`[COORDINATION] Initialized ${platformAgentDefinitions.length} platform agent definitions`);
  }

  /**
   * Set up coordination event handlers
   */
  private setupCoordinationHandlers(): void {
    // Handle orchestrator events for coordination
    this.orchestrator.on('workflow:started', (data) => {
      this.notifyPlatformAgents('workflow-started', data);
    });

    this.orchestrator.on('workflow:completed', (data) => {
      this.notifyPlatformAgents('workflow-completed', data);
    });

    this.orchestrator.on('agent:registered', (data) => {
      this.coordinateAgentRegistration(data);
    });

    console.log('[COORDINATION] Event handlers configured');
  }

  /**
   * Coordinate agent registration with REGISTRY-CORE and COMPLIANCE-ENGINE
   */
  private async coordinateAgentRegistration(agentData: any): Promise<void> {
    try {
      // Delegate to REGISTRY-CORE for global registration
      await this.delegateToAgent('registry-core', 'register-agent', agentData, 'high');

      // Delegate to COMPLIANCE-ENGINE for validation
      await this.delegateToAgent('compliance-engine', 'validate-agent', agentData, 'medium');

      console.log(`[COORDINATION] Agent registration coordinated: ${agentData.agentId}`);
    } catch (error) {
      console.error('[COORDINATION] Agent registration coordination failed:', error);
    }
  }

  /**
   * Delegate task to another platform agent
   */
  public async delegateToAgent(
    targetAgentId: string,
    operation: string,
    payload: any,
    priority: 'low' | 'medium' | 'high' | 'critical' = 'medium',
    timeout: number = 30000
  ): Promise<CoordinationResponse> {
    const targetAgent = this.platformAgents.get(targetAgentId);
    
    if (!targetAgent) {
      throw new Error(`Unknown platform agent: ${targetAgentId}`);
    }

    if (targetAgent.status === 'offline') {
      console.warn(`[COORDINATION] Agent ${targetAgentId} is offline, queuing delegation`);
      // In production, implement queuing mechanism
    }

    const request: CoordinationRequest = {
      id: `coord-${Date.now()}-${Math.random().toString(36).substr(2, 9)}`,
      from: this.agentId,
      to: targetAgentId,
      type: 'delegate',
      payload: { operation, data: payload },
      priority,
      timeout,
      correlationId: `coord-${Date.now()}`
    };

    this.pendingRequests.set(request.id, request);

    console.log(`[COORDINATION] Delegating ${operation} to ${targetAgentId} (priority: ${priority})`);

    // Simulate delegation (in production, use actual HTTP/gRPC calls)
    const response: CoordinationResponse = {
      id: `resp-${Date.now()}`,
      requestId: request.id,
      from: targetAgentId,
      to: this.agentId,
      status: 'success',
      payload: {
        operation,
        result: `Simulated ${operation} completion by ${targetAgentId}`,
        metadata: {
          processingTime: Math.random() * 1000,
          resourcesUsed: Math.floor(Math.random() * 100)
        }
      },
      timestamp: new Date()
    };

    this.pendingRequests.delete(request.id);
    this.emit('coordination:response', response);

    return response;
  }

  /**
   * Consult with another platform agent
   */
  public async consultAgent(
    targetAgentId: string,
    query: string,
    context: any
  ): Promise<CoordinationResponse> {
    const request: CoordinationRequest = {
      id: `consult-${Date.now()}`,
      from: this.agentId,
      to: targetAgentId,
      type: 'consult',
      payload: { query, context },
      priority: 'medium',
      timeout: 15000
    };

    console.log(`[COORDINATION] Consulting ${targetAgentId}: ${query}`);

    // Simulate consultation response
    const response: CoordinationResponse = {
      id: `resp-${Date.now()}`,
      requestId: request.id,
      from: targetAgentId,
      to: this.agentId,
      status: 'success',
      payload: {
        query,
        recommendation: `Simulated consultation response from ${targetAgentId}`,
        confidence: Math.random(),
        alternatives: [`Option A from ${targetAgentId}`, `Option B from ${targetAgentId}`]
      },
      timestamp: new Date()
    };

    this.emit('coordination:consultation', response);
    return response;
  }

  /**
   * Notify platform agents of important events
   */
  private async notifyPlatformAgents(eventType: string, eventData: any): Promise<void> {
    const notifications = Array.from(this.platformAgents.values())
      .filter(agent => agent.status !== 'offline')
      .map(agent => {
        return this.sendNotification(agent.id, eventType, eventData);
      });

    try {
      await Promise.allSettled(notifications);
      console.log(`[COORDINATION] Notified ${notifications.length} agents of ${eventType}`);
    } catch (error) {
      console.error('[COORDINATION] Failed to notify some agents:', error);
    }
  }

  /**
   * Send notification to specific agent
   */
  private async sendNotification(
    targetAgentId: string,
    eventType: string,
    eventData: any
  ): Promise<void> {
    const request: CoordinationRequest = {
      id: `notify-${Date.now()}`,
      from: this.agentId,
      to: targetAgentId,
      type: 'notify',
      payload: { eventType, data: eventData },
      priority: 'low',
      timeout: 5000
    };

    // Simulate notification (in production, use message bus or HTTP)
    console.log(`[COORDINATION] Notified ${targetAgentId} of ${eventType}`);
  }

  /**
   * Request validation from COMPLIANCE-ENGINE
   */
  public async requestValidation(
    validationType: string,
    target: any
  ): Promise<CoordinationResponse> {
    return this.delegateToAgent(
      'compliance-engine',
      'validate',
      { type: validationType, target },
      'high'
    );
  }

  /**
   * Request security check from SECURITY-AUTHORITY
   */
  public async requestSecurityCheck(
    checkType: string,
    subject: any
  ): Promise<CoordinationResponse> {
    return this.delegateToAgent(
      'security-authority',
      'security-check',
      { type: checkType, subject },
      'critical'
    );
  }

  /**
   * Coordinate with GOVERNANCE-CORE for budget enforcement
   */
  public async enforceBudget(
    executionId: string,
    currentUsage: any
  ): Promise<CoordinationResponse> {
    return this.delegateToAgent(
      'governance-core',
      'enforce-budget',
      { executionId, usage: currentUsage },
      'high'
    );
  }

  /**
   * Register agent capabilities with REGISTRY-CORE
   */
  public async registerCapabilities(
    agentId: string,
    capabilities: any[]
  ): Promise<CoordinationResponse> {
    return this.delegateToAgent(
      'registry-core',
      'register-capabilities',
      { agentId, capabilities },
      'medium'
    );
  }

  /**
   * Get platform agent status
   */
  public getPlatformAgentStatus(agentId?: string): PlatformAgent | PlatformAgent[] {
    if (agentId) {
      const agent = this.platformAgents.get(agentId);
      if (!agent) {
        throw new Error(`Platform agent not found: ${agentId}`);
      }
      return agent;
    }
    
    return Array.from(this.platformAgents.values());
  }

  /**
   * Update platform agent status
   */
  public updateAgentStatus(agentId: string, status: PlatformAgent['status']): void {
    const agent = this.platformAgents.get(agentId);
    if (agent) {
      agent.status = status;
      this.emit('platform-agent:status-change', { agentId, status });
      console.log(`[COORDINATION] Platform agent ${agentId} status: ${status}`);
    }
  }

  /**
   * Get coordination metrics
   */
  public getCoordinationMetrics(): any {
    const agents = Array.from(this.platformAgents.values());
    
    return {
      totalAgents: agents.length,
      activeAgents: agents.filter(a => a.status === 'active').length,
      offlineAgents: agents.filter(a => a.status === 'offline').length,
      pendingRequests: this.pendingRequests.size,
      capabilities: agents.reduce((acc, agent) => {
        agent.capabilities.forEach(cap => {
          acc[cap] = (acc[cap] || 0) + 1;
        });
        return acc;
      }, {} as Record<string, number>),
      responsibilities: agents.map(agent => ({
        agent: agent.id,
        responsibilities: agent.responsibilities
      })),
      lastUpdate: new Date()
    };
  }

  /**
   * Health check for platform coordination
   */
  public async healthCheck(): Promise<any> {
    const agents = Array.from(this.platformAgents.values());
    const healthChecks = agents.map(async (agent) => {
      // Simulate health check (in production, ping actual endpoints)
      return {
        agentId: agent.id,
        status: agent.status,
        endpoint: agent.endpoint,
        healthy: agent.status !== 'error',
        lastSeen: new Date()
      };
    });

    const results = await Promise.allSettled(healthChecks);
    const healthyAgents = results.filter(r => 
      r.status === 'fulfilled' && r.value.healthy
    ).length;

    return {
      overall: healthyAgents / agents.length > 0.7 ? 'healthy' : 'degraded',
      totalAgents: agents.length,
      healthyAgents,
      degradedAgents: agents.length - healthyAgents,
      details: results.map(r => 
        r.status === 'fulfilled' ? r.value : { error: r.reason }
      ),
      timestamp: new Date()
    };
  }

  /**
   * Coordinate workflow execution across platform agents
   */
  public async coordinateWorkflowExecution(
    executionId: string,
    workflowData: any
  ): Promise<void> {
    console.log(`[COORDINATION] Coordinating workflow execution: ${executionId}`);

    // Security validation
    await this.requestSecurityCheck('workflow-execution', workflowData);

    // Compliance validation
    await this.requestValidation('workflow-compliance', workflowData);

    // Budget enforcement setup
    await this.enforceBudget(executionId, { initial: true });

    // Monitoring setup
    await this.delegateToAgent(
      'monitor-platform',
      'monitor-execution',
      { executionId, workflowData },
      'medium'
    );

    console.log(`[COORDINATION] Workflow ${executionId} coordination complete`);
  }
}

export default PlatformCoordination;